alteracao de foto

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="leftside">
             <div class="info">
                 <div class="profession">
-                    UI/UX Designer & developer
+                    Desenvolvedor WEB
                 </div>
                 <div class="name">
                      Fábio Vasques
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="rightside">...</div>
+        <div class="rightside"></div>
 
     </section>
     <footer>
